refactor: change navbar display inline to flex and change main content

--- a/style.css
+++ b/style.css
@@ -5,32 +5,99 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    background-color: #FAEBD7;
+    padding-bottom: 100px;
 }
 
 .navbar {
-    background: #2948FF;
+    background: #FAEBD7;
     padding: 15px 40px;
-    font-size: 0;
 }
 
 .menu {
-    font-size: 16px;
-    text-align: right;
-    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .btn {
-    display: inline-block;
     padding: 12px 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     font-size: 14px;
     text-decoration: none;
-    color: #FFFFFF;
+    color: black;
 }
 
 .btn:hover {
-    background: #FFFFFF;
-    color: #2948FF;
+    background: #ffffff62;
+    color: #000208;
+    text-decoration: underline;
+    border-radius: 8px;
+}
+
+.cover {
+    text-align: center;
+    margin-top: 40px;
+}
+
+img {
+    padding-top: 24px;
+}
+
+.chapter-title {
+    font-size: 24px;
+    margin-top: 20px;
+}
+
+.content {
+    margin: auto;
+    max-width: 800px;
+    padding: 20px;
+    font-size: 20px;
+}
+
+p {
+    margin: 20px;
+}
+
+.hypo {
+    background-color: red;
+    color: white;
+}
+
+.cato {
+    background-color: orange;
+}
+
+.whatsapp-float {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    text-align: center;
+    width: 120px;
+    height: 120px;
+    border-radius: 20px;
+    box-shadow: 4px 8px #888888;
+}
+
+.whatsapp-float:hover {
+    background-color: white;
+}
+
+.whatsapp-icon {
+    width: 70px;
+    height: 70px;
+}
+
+.whatsapp-text {
+    display: block;
+    margin-top: -4px;
+    font-size: 14px;
+    color: green;
+    font-weight: bold;
 }
 
 @media (max-width: 768px) {
@@ -39,17 +106,15 @@ body {
     }
 
     .menu {
-        text-align: right;
-    }
-
-    .btn {
-        display: block;
-        margin: 10px auto;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 0px;
     }
 }
 
 @media (max-width: 1024px) {
     .menu {
-    display: inline-block;
+        display: flex;
+        justify-content: flex-end;
     }
 }
